Fixed image alignment issues

--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,6 @@ body{
 .home{
     margin-top: 120px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
 
@@ -78,4 +77,9 @@ body{
     font-weight: 700;
     color: var(--colorsecondary);
     letter-spacing: 40px;
+    display: flex;
+}
+
+.home img{
+    display: flex;
 }
